<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="enterprises.wayne.udacity_app_portfolio.MainActivity">

    <Button
        android:id="@+id/button_popular_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/popular_movies"
        android:theme="@style/colored_button_theme"/>

    <Button
        android:id="@+id/button_stock_hawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_popular_movies"
        android:layout_centerHorizontal="true"
        android:text="@string/stock_hawk"
        android:theme="@style/colored_button_theme"/>

    <Button
        android:id="@+id/button_build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_stock_hawk"
        android:layout_centerHorizontal="true"
        android:text="@string/build_it_bigger"
        android:theme="@style/colored_button_theme"/>

    <Button
        android:id="@+id/button_make_your_app_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:text="@string/make_your_app_material"
        android:theme="@style/colored_button_theme"/>

    <Button
        android:id="@+id/button_go_ubiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_make_your_app_material"
        android:layout_centerHorizontal="true"
        android:text="@string/go_ubiquitous"
        android:theme="@style/colored_button_theme"/>


    <Button
        android:id="@+id/button_capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_go_ubiquitous"
        android:layout_centerHorizontal="true"
        android:text="@string/capstone"
        android:theme="@style/colored_button_theme"/>


</RelativeLayout>
